--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
-    "@mui/material": "^7.3.4",
+    "@mui/lab": "^7.0.1-beta.19",
+    "@mui/material": "^7.3.5",
     "@mui/x-data-grid": "^8.16.0",
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.1.1",
