--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
     "swiper": "^12.0.3",
